			wxFormBuilder ChangeLog
********************************************************************************
06/27/2012 Version 3.03.04 (Beta)
* ID: 3519419 - Create inherited class bracket error.
* Fixed code generation for PHP wxSplitterWindow wxEVT_IDLE.
* Fixed "scrollbar jump" in Object Inspector occured if wxFB built with wxWidgets 2.9.x and later.

04/06/2012 Version 3.03.03 (Beta)
* ID: 3510480 - Subclass not displayed after reloading a project in 3.3.2.
* ID: 3506972 - Generating Python code.
* ID: 3148236 - Configure wxAuiManager + AUI-related properties aren't shown for widgets/forms where it has no sense.
* Fixed code generation for wxToolBar/wxAuiToolBar if parent form is managed by AUI.
* wxAdditions widgets (such are wxPropertyGrid, wxScintilla, etc.) can be placed directly to the AUI-managed frame as well.
* Offers validators just for those controls where it has a sense.
* Improved highlighting of widgets if AUI is used.
* AUI notebook is used instead of FlatNotebook if wxFB built with wxWidgets 2.9.x and later.
* Fixed various bugs if wxFB built with wxWidgets 2.9.x and later.
* Fixed Python code generation for tool placed inside stand-alone toolbar.

02/10/2012 Version 3.03.02 (Beta)
* ID: 3470209 - wxDIRCTRL_MULTIPLE Style missing for wxGenericDirCtrl.
* ID: 3472032 - Error in svn trunk 3.3-1 beta version generating python code.
* ID: 3480059 - Gettext, Unicode and wxPython.
* ID: 3486641 - XRC import does not accept CENTRE attributes.
* ID: 3482829 - Default font is targeted to the current machine.
* ID: 3460028 - Offer "default" value for fonts.
* ID: 3488348 - Newlines in wxStaticText.
* ID: 3493539 - Generate Inherited Class deletes additional includes (c++).

01/17/2012 Version 3.03.01 (Beta)
* Fixed code generation for bitmaps provided by wxArtProvider - John Labenski.
^ Added support for custom resource and client wxArtProvider's IDs in bitmap properties - John Labenski.